# audio-tagger

./: .gitignore  Architecture.md  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: build.yml
client/: package-lock.json
crates/onetagger-autotag/: Cargo.toml
crates/onetagger-autotag/src/: acoustid.rs  audiofeatures.rs  changes.rs  identifier.rs  lib.rs  shazam.rs
crates/onetagger-cli/: Cargo.toml
crates/onetagger-cli/src/: main.rs  spotify_auth.rs  user_config.rs
crates/onetagger-platforms/src/: spotify.rs
crates/onetagger-player/src/: aiff.rs  mp3.rs  ogg.rs
crates/onetagger-shared/src/: lib.rs
crates/onetagger-tagger/src/: lib.rs
crates/onetagger-tui/: Cargo.toml
crates/onetagger-tui/src/: app.rs  config.rs  lib.rs  run_state.rs  terminal.rs
crates/onetagger-tui/src/screens/: autotagger_form.rs  dashboard.rs  home.rs  mod.rs  settings.rs
crates/onetagger-ui/src/: lib.rs
crates/songrec/: Cargo.toml  README.md  VENDORED.md
crates/songrec/src/: lib.rs
crates/songrec/src/fingerprinting/: algorithm.rs  communication.rs  signature_format.rs
docs/superpowers/plans/: 2026-06-24-tui-sp1.md  2026-06-24-user-config.md
docs/superpowers/specs/: 2026-06-24-tui-architecture-design.md  2026-06-24-user-config-design.md
