[package]
name = "onetagger-tui"
version = "1.7.0"
edition = "2021"

[dependencies]
log = "0.4"
anyhow = "1.0"
ratatui = "0.29"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
convert_case = "0.8"
serde_json = "1.0"
crossbeam-channel = "0.5"
tui-textarea = "0.7"

onetagger-shared = { path = "../onetagger-shared" }
onetagger-tagger = { path = "../onetagger-tagger" }
onetagger-autotag = { path = "../onetagger-autotag" }
onetagger-playlist = { path = "../onetagger-playlist" }
